--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -61,6 +61,11 @@
                         <a href="{{ url_for('showtests_itraceroute') }}" class="sb-nav-link sb-dropdown-link">ACI
                             iTraceroute</a>
                     </li>
+                    <li class="sb-nav-item">
+                        <a href="{{ url_for('showtests_customshowcommand') }}"
+                            class="sb-nav-link sb-dropdown-link">Custom Show Command</a>
+                    </li>
+
                 </ul>
             </li>
             <li class="sb-nav-item">
