--- a/templates/test_progress.html
+++ b/templates/test_progress.html
@@ -38,6 +38,12 @@
                 Skipped: <span id="itraceroute_skipped">{{ stats.itraceroute_test.skipped }}</span> /
                 Total: <span id="itraceroute_total">{{ stats.itraceroute_test.total }}</span>
             </p>
+            <p><strong>Custom Show Command Tests:</strong><br>
+                Completed: <span id="customshowcommand_completed">{{ stats.customshowcommand_test.completed }}</span> /
+                Running: <span id="customshowcommand_running">{{ stats.customshowcommand_test.running }}</span> /
+                Skipped: <span id="customshowcommand_skipped">{{ stats.customshowcommand_test.skipped }}</span> /
+                Total: <span id="customshowcommand_total">{{ stats.customshowcommand_test.total }}</span>
+            </p>
         </div>
     </div>
 
