--- a/templates/manage_test_groups.html
+++ b/templates/manage_test_groups.html
@@ -203,7 +203,7 @@
             <input type="text" name="group_name" id="edit_group_name" class="form-control"
                 value="{{ selected_group.name }}">
         </div>
-        <button type="submit" class="btn btn-primary">Update Group</button>
+        <button type="submit" class="btn btn-primary">Save Group Name</button>
     </form>
     {% endif %}
 </div>
